# sample

./: .gitignore  README.md  pyproject.toml  readme.md
calculator/: .gitignore  calculator.py
cli_db_app/: __init__.py
cli_db_app/commands/: cli.py
cli_db_app/models/: screen.py
php-demo/: composer.json  list-books.php
php-demo/src/Commands/: ListBooks.php
php-demo/src/Models/: Book.php  BookCollection.php
php-web-app/: composer.json
php-web-app/src/Models/: FirstClass.php  Person.php
php-web-app/src/Views/: first-view.php  person-view.php
story-creator/: composer.json  index.php
story-creator/config/: app.php  google.php  session.php
story-creator/src/Auth/: GoogleAuth.php
story-creator/src/Models/: Character.php  CharacterType.php  Scene.php
story-creator/src/Views/: color-palette.php  index.php  login.php  scroll-buttons.php  story-creator.php
story-creator/src/Views/auth/: callback.php
